--- a/project/team.html
+++ b/project/team.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>NMT CSE321 Project - FinTool </title>
-		<link rel="stylesheet" type="text/css" href="default.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<header>
