--- a/project/alan.html
+++ b/project/alan.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h3 id="name">Alan Fenton</h3>
-		<img id="photo" src="img/alan.jpg"/>
+		<img id="photo" src="img/alan_portrait.jpg"/>
 		<p id="blurb">Counterpart to Alex and Orion, Thing 3 to Thing 2 and Thing 1 respectively. Chief Dalmuti of Robot Affairs, with sixty seconds of experience in the field. </p>
 		<a id="resume" href="https://www.cs.nmt.edu/~alanfenton/index.html" target="_blank">More Info</a>
 	</body>
