--- a/project/alex.html
+++ b/project/alex.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
 	<body>
+
 		<h3>Alexander Bair</h3>
-		<img src="img/cse321_portrait.jpg">
+		<img id="photo" src="img/alex_portrait.jpg">
 		<p id="blurb">
-			Team Member - 
+			Team Member - Designer of FinTool. Worked to create design and philosophy of FinTool to help incentivize fiscal responsinility.
 			<a href="https://www.cs.nmt.edu/~bair.alex/bair_alexander_resume.html" target="_blank"> More about Alexander</a>
 		</p>
 	</body>
