--- a/project/index.html
+++ b/project/index.html
@@ -15,6 +15,11 @@
 				<li><a href="report.html">Report</a></li>
 			</ul>
 		</nav>
+        <section class="infoContainer">
+            <h3>Project Information</h3>
+            <hr>
+            <h3>News</h3>
+        </section>
 		<!-- Section blurb goes here -->
 		<footer>
 		</footer>
