--- a/project/alan.html
+++ b/project/alan.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Alan's blurb</title>
-		<link rel="stylesheet" href="style.css">
-	</head>
 	<body>
 		<h3 id="name">Alan Fenton</h3>
-		<img id="photo" src="img/alan_portrait.jpg"/>
-		<p id="blurb">Counterpart to Alex and Orion, Thing 3 to Thing 2 and Thing 1 respectively. Chief Dalmuti of Robot Affairs, with sixty seconds of experience in the field. Has one or more css files which he cannot recommend.</p>
-		<a id="resume" href="https://www.cs.nmt.edu/~alanfenton/index.html" target="_blank">More Info</a>
+		<img id="photo" alt="Picture of Alan Fenton" src="img/alan_portrait.jpg"/>
+		<p id="blurb">Counterpart to Alex and Orion, Thing 3 to Thing 2 and Thing 1 respectively. Chief Dalmuti of Robot Affairs, with sixty seconds of experience in the field. Has one or more css files which he cannot recommend.
+			<a id="resume" href="https://www.cs.nmt.edu/~alanfenton/index.html" target="_blank">More Info</a>
+		</p>
 	</body>
 </html>
