Added stylesheet to orion.html

--- a/project/orion.html
+++ b/project/orion.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <h3 id = "name">Orion Nassaux</h3>
-        <img src="img/orion_portrait.jpg" alt="ORIONFACE" id="photo">
+        <img id="photo" src="img/orion_portrait.jpg" alt="ORIONFACE">
         <p id = "blurb">I am a team member of Red Dime and head of the Department for the Regulation and Control of Rampant Programmers. I've helped contribute to the design of the FinTool. If you want to know more about me you can visit my <a href="https://www.cs.nmt.edu/~orion_nassaux/orion.html" target="_blank">resume</a>.</p>
-    </body
+    </body>
 </html>
