Updated to include stylesheets. Added class to team.html section

--- a/project/team.html
+++ b/project/team.html
@@ -16,7 +16,7 @@
 			</ul>
 		</nav>
 		<!-- Section blurb goes here -->
-		<section>
+		<section class="infoContainer">
 			<iframe id="frame" src="orion.html"></iframe>
 			<br></br>
 			<hr>
