--- a/project/alan.html
+++ b/project/alan.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
 	<body>
 		<h3 id="name">Alan Fenton</h3>
 		<img id="photo" alt="Picture of Alan Fenton" src="img/alan_portrait.jpg"/>
