Color scheme & Description
Add the color scheme, new style ids for the color scheme, and short description of the project

--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
 		<title>NMT CSE321 Project - FinTool </title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body>
+	<body id="outline">
 		<header>
 			<h1>NMT CSE321 Project <br>FinTool</h1>
 		</header>
@@ -17,6 +17,13 @@
 		</nav>
         <section class="infoContainer">
             <h3>Project Information</h3>
+			<p> The main goal of the project is to provide the users with a tool
+				 to take control of their finances. The FinTool allows the users
+				 to track expenditures, create monthly budgets, then the site takes
+				 these to provide the users with information about their spending
+				  habits. Banks thrive on overdraft fees and cash advance interest,
+				  that is why no bank will tell you about your spending. FInTool
+				  helps to analyze your spending and develop responsible financial habits. </p>
             <hr>
             <h3>News</h3>
         </section>
