--- a/project/team.html
+++ b/project/team.html
@@ -4,7 +4,7 @@
 		<title>NMT CSE321 Project - FinTool </title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body>
+	<body id="outline">
 		<header>
 			<h1>NMT CSE321 Project <br>FinTool</h1>
 		</header>
