footer message included

--- a/project/index.html
+++ b/project/index.html
@@ -22,6 +22,7 @@
         </section>
 		<!-- Section blurb goes here -->
 		<footer>
+		The website above was developed by Red Dime, for the FinTool service.
 		</footer>
 	</body>
 </html>
