--- a/project/team.html
+++ b/project/team.html
@@ -28,6 +28,7 @@
 			<hr>
 		</section>
 		<footer>
+        The website above was developed by Red Dime, for the FinTool service.
 		</footer>
 	</body>
 </html>
